--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -123,6 +123,110 @@
             "customer": "عميل",
             "bakery_owner": "صاحب مخبز",
             "restaurant_owner": "صاحب مطعم"
+        },
+        "auth": {
+            "signup_title": "إنشاء حساب جديد",
+            "signup_heading": "مرحباً بك في خُبزاتي",
+            "signup_subheading": "أنشئ حسابك الجديد للبدء",
+            "signup_button": "إنشاء حساب",
+            "terms_and_conditions_prompt": "أوافق على الشروط والأحكام",
+            "already_have_account_prompt": "لديك حساب بالفعل؟",
+            "login_link": "تسجيل الدخول",
+            "forgot_password_heading": "نسيت كلمة المرور؟",
+            "forgot_password_subheading": "أدخل بريدك الإلكتروني وسنرسل لك رابط إعادة تعيين كلمة المرور",
+            "forgot_password_send_button": "إرسال رابط إعادة التعيين",
+            "login_title": "تسجيل الدخول",
+            "login_subheading": "مرحباً بك مرة أخرى",
+            "login_button": "تسجيل الدخول",
+            "forgot_password_link": "نسيت كلمة المرور؟",
+            "no_account_prompt": "ليس لديك حساب؟",
+            "signup_link": "إنشاء حساب",
+            "otp_verification_title": "تحقق من الرمز",
+            "otp_verification_heading": "أدخل رمز التحقق",
+            "otp_verification_subheading": "تم إرسال رمز التحقق إلى رقم هاتفك",
+            "otp_verify_button": "تحقق",
+            "otp_did_not_receive_prompt": "لم تستلم الرمز؟",
+            "otp_resend_link": "إعادة إرسال"
+        },
+        "form": {
+            "username_label": "اسم المستخدم",
+            "username_hint": "أدخل اسم المستخدم",
+            "email_label": "البريد الإلكتروني",
+            "email_hint": "أدخل بريدك الإلكتروني",
+            "phone_label": "رقم الهاتف",
+            "phone_hint": "أدخل رقم هاتفك",
+            "password_label": "كلمة المرور",
+            "password_hint": "أدخل كلمة المرور",
+            "confirm_password_label": "تأكيد كلمة المرور",
+            "confirm_password_hint": "أعد إدخال كلمة المرور",
+            "forgot_password_title": "نسيت كلمة المرور"
+        },
+        "form_validation": {
+            "required": "هذا الحقل مطلوب",
+            "invalid_email": "يرجى إدخال بريد إلكتروني صحيح",
+            "password_short": "كلمة المرور يجب أن تكون 6 أحرف على الأقل",
+            "password_mismatch": "كلمة المرور غير متطابقة",
+            "agree_terms": "يجب الموافقة على الشروط والأحكام"
+        },
+        "common": {
+            "back_button": "رجوع"
+        },
+        "bakery_owner": {
+            "dashboard": {
+                "title": "لوحة تحكم المخبز",
+                "sales_overview_title": "نظرة عامة على المبيعات",
+                "recent_orders_title": "الطلبات الحديثة",
+                "quick_stats_title": "الإحصائيات السريعة",
+                "order_id_placeholder": "رقم الطلب",
+                "order_status_placeholder": "حالة الطلب",
+                "manage_products": "إدارة المنتجات",
+                "manage_orders": "إدارة الطلبات",
+                "bakery_settings": "إعدادات المخبز"
+            },
+            "order_management": {
+                "title": "إدارة الطلبات",
+                "order_id_placeholder": "رقم الطلب",
+                "customer_name_placeholder": "اسم العميل",
+                "order_status_placeholder": "حالة الطلب"
+            },
+            "product_management": {
+                "title": "إدارة المنتجات",
+                "add_product_button": "إضافة منتج",
+                "product_name_placeholder": "اسم المنتج",
+                "product_price_placeholder": "السعر"
+            }
+        },
+        "cart": {
+            "title": "سلة التسوق",
+            "item_name_placeholder": "اسم المنتج",
+            "subtotal_label": "المجموع الفرعي",
+            "total_label": "المجموع الكلي",
+            "proceed_to_checkout_button": "المتابعة للدفع",
+            "empty_message": "سلة التسوق فارغة"
+        },
+        "checkout": {
+            "title": "إتمام الطلب",
+            "delivery_address_title": "عنوان التوصيل",
+            "select_address_prompt": "اختر عنوان التوصيل",
+            "payment_method_title": "طريقة الدفع",
+            "select_payment_method_prompt": "اختر طريقة الدفع",
+            "order_summary_title": "ملخص الطلب",
+            "delivery_fee_label": "رسوم التوصيل"
+        },
+        "home": {
+            "title": "الرئيسية",
+            "categories_title": "التصنيفات",
+            "nearby_vendors_title": "المتاجر القريبة",
+            "popular_vendors_title": "المتاجر الشائعة",
+            "category_bakery": "مخبز",
+            "category_restaurant": "مطعم"
+        },
+        "order_confirmation": {
+            "title": "تأكيد الطلب",
+            "heading": "تم إرسال طلبك بنجاح!",
+            "subheading": "شكراً لطلبك. يمكنك تتبع حالته من سجل الطلبات.",
+            "track_order_button": "تتبع طلبك",
+            "back_to_home_button": "العودة إلى الرئيسية"
         }
     }
 }
