--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -409,7 +409,16 @@
             "error": "خطأ في تحميل المخزون",
             "retry": "إعادة المحاولة",
             "editCategory": "تعديل الصنف",
-            "saveChanges": "حفظ التعديلات"
+            "saveChanges": "حفظ التعديلات",
+            "confirmation": {
+                "title": "تأكيد التعديل",
+                "message": "هل أنت متأكد من اجراء التعديلات على صنف الخبز؟",
+                "no_button": "لا",
+                "yes_button": "نعم، متأكد"
+            },
+            "save_success": "تم بنجاح!",
+            "save_error": "حدث خطأ أثناء الحفظ",
+            "ok_button": "موافق"
         }
     }
 }
